--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
         <table>
             <thead>
                 <tr>
-                    <th>Meal</th>
-                    <th>Ingredients</th>
-                    <th>Price</th>
+                    <th>Meal (food)</th>
+                    <th>Ingredients(ways)</th>
+                    <th>Price(money)</th>
                 </tr>
+
+                  <thead>
+                    <tr>
+                      <td>Penne Alla Vodka with grilled chicken</td>
+                      <td>Cook 8 oz of penne in salted water until al dente, then drain and set aside. Season 2 chicken breasts with olive oil, salt, pepper, and optional Italian seasoning, then grill for 6–7 minutes per side until cooked through; slice after resting. In a pan, sauté minced garlic and chopped onion in olive oil, then add red pepper flakes and ¾ cup tomato paste. Cook for a couple of minutes, deglaze with ½ cup vodka, and let it simmer until reduced. Stir in ½ cup heavy cream and ¼ cup grated Parmesan, season with salt and pepper, and toss in the cooked pasta. Top with sliced grilled chicken and more Parmesan to serve.</td>
+                      <td>35 dollars</td>
+                    </tr>
+                  </thead>
+                
             </thead>
             <tbody>
                 
