--- a/index.html
+++ b/index.html
@@ -28,7 +28,25 @@
                     <tr>
                       <td>Penne Alla Vodka with grilled chicken</td>
                       <td>Cook 8 oz of penne in salted water until al dente, then drain and set aside. Season 2 chicken breasts with olive oil, salt, pepper, and optional Italian seasoning, then grill for 6–7 minutes per side until cooked through; slice after resting. In a pan, sauté minced garlic and chopped onion in olive oil, then add red pepper flakes and ¾ cup tomato paste. Cook for a couple of minutes, deglaze with ½ cup vodka, and let it simmer until reduced. Stir in ½ cup heavy cream and ¼ cup grated Parmesan, season with salt and pepper, and toss in the cooked pasta. Top with sliced grilled chicken and more Parmesan to serve.</td>
+
                       <td>35 dollars</td>
+                       <tr>
+                          <td>Waffles</td>
+                          <td>In a bowl, whisk together 1 cup of flour, 2 tbsp sugar, 1 tsp baking powder, and a pinch of salt. In another bowl, mix 1 cup milk, 1 egg, 2 tbsp melted butter (or oil), and 1 tsp vanilla extract. Combine the wet and dry ingredients until just mixed. Preheat your waffle iron, lightly grease it, and pour in the batter. Cook according to your waffle maker’s instructions until golden and crisp. Serve warm with butter, syrup, or your favorite toppings like fruit, whipped cream, or chocolate chips.</td>
+                          <td>20 dollars</td>
+
+                        <tr>
+                            <td>french fires</td>
+                            <td>Peel (optional) and cut 2–3 large russet potatoes into thin sticks, then soak them in cold water for at least 30 minutes to remove excess starch. Drain, pat them completely dry, and toss with 1–2 tbsp of vegetable oil and a pinch of salt. Preheat your oven to 425°F (220°C) or heat oil in a deep fryer to 350°F (175°C). For oven fries, spread the potatoes in a single layer on a baking sheet and bake for 25–30 minutes, flipping halfway, until golden and crispy. For frying, cook in batches for 3–4 minutes until golden. Season with salt and enjoy hot</td>
+                            <td>10 dollars</td>
+
+
+                        </tr>
+
+
+                       </tr>
+
+
                     </tr>
                   </thead>
                 
